@@ -1,4 +1,7 @@
 2008-01-22 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/ExportAssistant.py: part 3 of bug #1584
+
+2008-01-22 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/Editors/_EditPerson.py: callback for gallerytab no longer needed
 
 2008-01-18 Raphael Ackermann <raphael.ackermann@gmail.com>
